<resources>
    <string name="app_name">CineMates20</string>
    <string name="titoloProgetto">CineMates20</string>
    <string name="linkPasswordDimenticata"><u>Password dimenticata ?</u></string>
    <string name="loginText">Login</string>
    <string name="passwordDimenticata"><u>Non sei registrato ? registrati</u></string>
    <string name="scegliImmagineProfiloTest"><u>Scegli immagine profilo</u></string>
    <string name="buttonAnnulla">Annulla</string>
    <string name="buttonRegistrati">Registrati</string>
    <string name="homeTitle">PaginaHome</string>
    <string name="menu_home">Home</string>
    <string name="seconda_schermata">SECONDA SCHERMATA</string>
    <string name="descrizionericerca">descrizioneRicerca</string>
    <string name="descrizioneamici">descrizioneAmici</string>
    <string name="tool_bars">TOOL BARS</string>
    <string name="menu_laterale">menu laterale</string>
    <string name="nuovaLista">nuova lista</string>
    <string name="title_activity_prova_menu">provaMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profilo">Profilo</string>
    <string name="menu_info">Info</string>
    <string name="menu_logout">Logout</string>
    <string name="amici">Amici</string>
    <string name="tutte_le_richieste"> <u>Tutte le richieste</u> </string>
    <string name="richieste_di_amicizia">Richieste di amicizia</string>
    <string name="nome_utente">nome_utente</string>
    <string name="accetta_amicizia">accetta amicizia</string>
    <string name="rifiuta_amicizia">rifiuta amicizia</string>
    <string name="aggiungi_amico">aggiungi amico</string>
    <string name="rimuovi_amico">rimuovi amico</string>
    <string name="aggiungi_nuovo_amico">Aggiungi nuovo amico</string>
    <string name="cerca_tra_gli_amici">Cerca tra gli amici</string>
    <string name="elenco_amici">Elenco amici</string>
    <string name="ricerca_utenti">Ricerca utenti</string>
    <string name="username">Username</string>
    <string name="risultati_ricerca">Risultati ricerca</string>
    <string name="film_in_comune">Film in comune</string>

    <string name="hint_barra_ricerca_film">Titolo,Genere,Regista,Attore</string>
    <string name="cambio_password"><u>Cambia password</u></string>
    <string name="cambio_immagine_profilo"><u>Cambia immagine profilo</u></string>
    <string name="elenco_film_in_comune">Elenco Film in comune</string>

    <string name="password">Password</string>
    <string name="button_login_gg">Login with google</string>
    <string name="login_with_fb">Login with fb</string>
    <string name="conferma_password">Conferma password</string>
    <string name="e_mail">E-mail</string>
    <string name="descrizioneLista">Descrizio mancante... Descrizio mancante...Descrizio mancante...Descrizio mancante...Descrizio mancante...</string>
    <string name="elenco_film">Elenco Film</string>
    <string name="descrizioneImmagineProfilo">Immagine di profilo dell\'utente visualizzato nella schermata profilo</string>
    <string name="scrittaUsername">Username :</string>
    <string name="scrittaPassword">Password :</string>
    <string name="scrittaE_mail">E-Mail :</string>
    <string name="testo_da_inserire">Testo da inserire</string>
    <string name="hintBarraRicercaFilm">Titolo film</string>
    <string name="notifiche">Notifiche</string>
    <string name="la_mia_lista">La mia lista</string>
    <string name="genereTemporaneo">Genere :</string>
    <string name="durataTemporanea">Durata :</string>
    <string name="valutazioneTemporanea">Valutazione :</string>
    <string name="descrizioneImmagineFilm">Immagine di copertina di un film</string>
    <string name="titoloTemporaneo">Titolo mancante</string>
    <string name="descrizionePulsantePlus">immagine del pulsante plus</string>
    <string name="titoloTendinaSalvaFilm">Salva in...</string>
    <string name="buttonFatto">Fatto</string>
    <string name="testoLinkCreaNuovaListaDaTendina">+ Crea nuova lista</string>
    <string name="titoloTendinaCambioImmagineProfilo">Cambio immagine</string>
    <string name="buttonSalva">Salva</string>
    <string name="descrizionePrimaImmagineTendinaCambioImmagineProfilo">Immagine di profilo dell\'utente attualmente posseduta</string>
    <string name="descrizioneSecondaImmagineTendinaCambioImmagineProfilo">Immagine selezionata dall\'utente nella tendina di cambio immagine</string>
    <string name="buttonScegliImmagineProfilo">Scegliere immagine</string>
    <string name="titoloTendinaCambioPassword">Cambio password</string>
    <string name="inserire_nuova_password">Inserire nuova password</string>

    <string name="titoloTendinaCreaNuovaLista">Nuova lista</string>
    <string name="titolo">Titolo</string>
    <string name="descrizione">Descrizione</string>
    <string name="titoloPerDescrizioneTendinaCreaNuovaLista">Aggiungi una descrizione (opzionale)</string>
    <string name="invia_codice_recupero">Invia codice recupero</string>
    <string name="testoTendinaInserisciMail">Inserire e-mail dell\' account</string>
    <string name="testoTendinaNuovaPasswordRecupero">Inserire nuova password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="titoloTendinaCambioPass">Recupero Password</string>
    <string name="testoTendinaRecuperoPassCodice">Inserire codice conferma</string>
    <string name="xxxx">XXXX</string>
    <string name="buttonConferma">Conferma</string>
    <string name="titoloTendinaCambioImmagine">Immagine profilo</string>
    <string name="testoButtonScegliImmagine">Scegliere immagine</string>
    <string name="segnalazione">Segnalazione</string>
    <string name="contenutiOffensivi">Contenuti offensivi od oltraggiosi</string>
    <string name="spoiler">Spoiler</string>
    <string name="contenutiViolenti">Contenuti violenti o ripugnanti</string>
    <string name="specificare_il_motivo_della_segnalazione">Specificare il motivo della segnalazione</string>
    <string name="liste">Liste</string>
    <string name="nuova_lista">Nuova lista</string>
    <string name="elenco_liste">Elenco liste</string>
    <string name="descrizionePulsantePlusCreaLista">pulsante per creare una nuova lista</string>
    <string name="salva_in_una_lista">Salva in una lista</string>
    <string name="rimuovi_da_questa_lista">Rimuovi film da questa lista</string>
    <string name="elimina_lista">Elimina lista</string>
    <string name="rimuovi_dalla_lista">Rimuovi dalla lista</string>
    <string name="cancella_lista">Cancella lista</string>
    <string name="operazione">operazione</string>
    <string name="posizione">posizione</string>
    <string name="facebook_app_id">965708617514087</string>
    <string name="fb_login_protocol_scheme">fb965708617514087</string>
    <string name="username_tag">username</string>
    <string name="extended_fab_content_desc">nuova lista</string>
    <string name="or">or</string>
    <string name="logo">logo</string>
    <string name="inserisci_il_tuo_username">Inserisci il tuo username</string>
    <string name="titoloTendinaUsername">Username nuovo utente</string>
    <string name="titoloTendinaConfermaRegistrazione">Verifica account</string>
    <string name="testoTendinaVerificaAccount">Inserire codice di verifica inviato sull email</string>
    <string name="hai_un_codice"><u>Hai già un codice ?</u></string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="channel_name">chanel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="conferma_amicizia_inviata">Amicizia inviata con successo</string>
    <string name="conferma_amicizia_accettata">Amicizia accettata</string>
    <string name="conferma_amicizia_rifiutata">Amicizia rifiutata</string>
    <string name="conferma_amicizia_rimossa">Amicizia rimossa con successo</string>
    <string name="conferma_richiesta_amicizia_rimossa">Richiesta amicizia rimossa con successo</string>

</resources>
