<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >


    <group android:checkableBehavior="single"
        app:itemShapeFillColor="@color/white">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"
            android:orderInCategory="100"
            />
        <item
            android:id="@+id/nav_profilo"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profilo"
            android:orderInCategory="200"
            />
        <item
            android:id="@+id/nav_Info"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/menu_info"
            android:orderInCategory="300"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout"
            android:orderInCategory="400"

        />



    </group>
</menu>