<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="400dp"
    android:background="@drawable/tendina_background">


    <TextView
        android:id="@+id/titoloTendinaSalvaFilmInLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/segnalazione"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/semiGrey"
        app:layout_constraintEnd_toEndOf="@+id/buttonFattoSegnalazione"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintTop_toBottomOf="@+id/titoloTendinaSalvaFilmInLista" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@color/semiGrey"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintEnd_toEndOf="@+id/buttonFattoSegnalazione"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione" />

    <Button
        android:id="@+id/buttonAnnullaSegnalazione"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_textfield"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonAnnulla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonFattoSegnalazione"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_textfield"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonFatto"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintEnd_toEndOf="parent" />



    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/specificare_il_motivo_della_segnalazione"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <RadioGroup
        android:id="@+id/radioGroupPulsantiSegnalazione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="@+id/buttonFattoSegnalazione"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0"
        >

        <RadioButton
            android:id="@+id/radioButtonContenutiOffensivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/contenutiOffensivi"
            app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioButton
            android:id="@+id/radioButtonSpoiler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/spoiler"
            app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonContenutiOffensivi" />

        <RadioButton
            android:id="@+id/radioButtonContenutiViolenti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/contenutiViolenti"
            app:layout_constraintStart_toStartOf="@+id/buttonAnnullaSegnalazione"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonSpoiler" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>