<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:scaleType="centerCrop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoImageLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/login_logo"
        android:contentDescription="@string/logo" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonLoginWithGG"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:text="@string/button_login_gg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageLogin"
        app:layout_constraintVertical_bias="0.05"
        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonLoginWithFB"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center"
        android:text="@string/login_with_fb"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginWithGG"
        app:layout_constraintVertical_bias="0.031"  />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linea_deliminante"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"


        app:layout_constraintStart_toStartOf="@+id/buttonLoginWithFB"
        app:layout_constraintEnd_toEndOf="@id/buttonLoginWithFB"
        app:layout_constraintTop_toBottomOf="@id/buttonLoginWithFB"

        android:layout_marginTop="20dp"
        >

        <View
            android:id="@+id/linea_sx"
            android:layout_width="100dp"
            android:layout_height="2dp"

            android:background="@color/grey"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <View
            android:id="@+id/linea_dx"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/grey"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <TextView
            android:id="@+id/textView_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/or"
            android:textColor="@color/white"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linea_sx"
            app:layout_constraintEnd_toStartOf="@+id/linea_dx"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"


            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInput_UsernameLoginScreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:singleLine="true"
        android:textColor="@color/white"

        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea_deliminante"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsernameLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:singleLine="true"
            android:inputType="textEmailAddress"

            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInput_PasswordLoginScreen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="end"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInput_UsernameLoginScreen"
        app:layout_constraintVertical_bias="0.069"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/linkPasswordDimenticataLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkPasswordDimenticata"
        android:textColor="@color/linkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInput_PasswordLoginScreen"
        app:layout_constraintVertical_bias="0.093"

        />

     <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/loginText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkPasswordDimenticataLoginScreen"
        app:layout_constraintVertical_bias="0.282"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/background_button_textfield"/>

    <TextView
        android:id="@+id/linkRegistrazioneLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordDimenticata"
        android:textColor="@color/linkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.553" />



</androidx.constraintlayout.widget.ConstraintLayout>