<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="350dp"
    android:background="@drawable/tendina_background">


    <TextView
        android:id="@+id/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/titoloTendinaCambioImmagineProfilo"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/semiGrey"
        app:layout_constraintEnd_toEndOf="@+id/buttonSalvaImmagineTendinaCambioImmagineProfilo"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaTendinaCambioImmagineProfilo"
        app:layout_constraintTop_toBottomOf="@+id/titolo" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@color/semiGrey"
        app:layout_constraintBottom_toTopOf="@+id/buttonAnnullaTendinaCambioImmagineProfilo"
        app:layout_constraintEnd_toEndOf="@+id/buttonSalvaImmagineTendinaCambioImmagineProfilo"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaTendinaCambioImmagineProfilo" />

    <Button
        android:id="@+id/buttonAnnullaTendinaCambioImmagineProfilo"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_textfield"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonAnnulla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSalvaImmagineTendinaCambioImmagineProfilo"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_textfield"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonSalva"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAnnullaTendinaCambioImmagineProfilo"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/immagineProfiloAttualeTendinaCambioImmagineProfilo"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/descrizionePrimaImmagineTendinaCambioImmagineProfilo"
        app:layout_constraintStart_toStartOf="@+id/buttonAnnullaTendinaCambioImmagineProfilo"
        app:layout_constraintTop_toBottomOf="@+id/titolo"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageView
        android:id="@+id/immagineProfiloAggiornataTendinaCambioImmagineProfilo"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:contentDescription="@string/descrizioneSecondaImmagineTendinaCambioImmagineProfilo"
        app:layout_constraintEnd_toEndOf="@+id/buttonSalvaImmagineTendinaCambioImmagineProfilo"
        app:layout_constraintTop_toTopOf="@+id/immagineProfiloAttualeTendinaCambioImmagineProfilo"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/immagineProfiloAttualeTendinaCambioImmagineProfilo"
        app:layout_constraintEnd_toStartOf="@+id/immagineProfiloAggiornataTendinaCambioImmagineProfilo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/immagineProfiloAttualeTendinaCambioImmagineProfilo"
        app:layout_constraintTop_toTopOf="@+id/immagineProfiloAttualeTendinaCambioImmagineProfilo"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_36" />

    <Button
        android:id="@+id/buttonScegliereImmagineProfiloTendinaCambioImmagineProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/buttonScegliImmagineProfilo"
        android:backgroundTint="@color/linkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/immagineProfiloAggiornataTendinaCambioImmagineProfilo"

        />


</androidx.constraintlayout.widget.ConstraintLayout>